# Napcat-mofish

./: .gitignore  README.md  goal.md  pyproject.toml
src/mofish/: __init__.py  app.py  config.py  main.py
src/mofish/api/: __init__.py  actions.py  client.py  events.py
src/mofish/handlers/: __init__.py  event_handler.py  input_handler.py  mention_handler.py
src/mofish/state/: __init__.py  member_cache.py  session.py
src/mofish/ui/: __init__.py  autocomplete.py  boss_mode.py  chatlog.py  input.py  sidebar.py  styles.tcss
src/mofish/utils/: __init__.py  commands.py
